Implements map-persistence.
